[package]
name = "iana"
version = "0.0.1"
edition = "2021"
description = "iana types generator"
homepage = "https://github.com/yaws-rs/h11spec"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/h11spec"
categories = ["science"]

[dependencies]
csv = "1.4.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
insta = { version = "1.38" }
rstest = { version = "0.19" }
criterion = { version = "0.5" }

[features]
default = []

[package.metadata.docs.rs]
features = [""]

